Implement responsiveness and color adjustments for mobile and desktop views

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <section class="container">
+    <main class="container">
       <div>
         <img src="./assets/images/illustration-article.svg" alt="" />
       </div>
@@ -39,13 +39,13 @@
           <li>Greg Hooper</li>
         </ul>
       </div>
-    </section>
+    </main>
 
-    <div class="attribution">
+    <footer class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
       >. Coded by <a href="https://omarelati.vercel.app/">Omar Elati</a>.
-    </div>
+    </footer>
   </body>
 </html>
